[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/next"
repository = "https://github.com/alloy-rs/next"
exclude = ["benches/", "tests/"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-json-rpc = { version = "0.1.0", path = "crates/json-rpc" }
alloy-transport = { version = "0.1.0", path = "crates/transport" }
alloy-pubsub = { version = "0.1.0", path = "crates/pubsub" }
alloy-transport-http = { version = "0.1.0", path = "crates/transport-http" }
alloy-transport-ws = { version = "0.1.0", path = "crates/transport-ws" }
alloy-networks = { version = "0.1.0", path = "crates/networks" }
alloy-rpc-types = { version = "0.1.0", path = "crates/rpc-types" }
alloy-rpc-client = { version = "0.1.0", path = "crates/rpc-client" }

alloy-primitives = { version = "0.5.1", default-features = false, features = ["std"] }
alloy-sol-types = { version = "0.5.1", default-features = false, features = ["std"] }
alloy-rlp = "0.3"

# async
async-trait = "0.1.74"
futures = "0.3.29"
futures-util = "0.3.29"
futures-executor = "0.3.29"

http-body-util = "0.1.0"
hyper = { version = "1.0", default-features = false }
hyper-util = "0.1.1"
tokio = "1.33"
tower = { version = "0.4.13", default-features = false, features = ["util"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

tempfile = "3.8"

assert_matches = "1.5"
base64 = "0.21"
bimap = "0.6"
itertools = "0.12"
pin-project = "1.1"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
home = "0.5"
semver = "1.0"
thiserror = "1.0"
url = "2.4"
